# MasterSkateX

./: .replit  Procfile  application.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  shop.db  wsgi.py
static/user/css/: style.css  stylesource.css
templates/: about.html  cart.html  checkout.html  contact.html  index.html  index_boys.html  index_girls.html  return.html  search.html  template.html  user-profile.html
templates/dashboard/html/: dashboard.html  layout.html
templates/product/: index.html
