[tool.poetry]
name = "masterskatex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
werkzeug = "^1.0.1"
wtforms = "^2.3.3"
flask-login = "^0.5.0"
flask-sslify = "^0.1.5"
itsdangerous = "^1.1.0"
peewee = "^3.14.1"
flask-reuploaded="^0.5.0"
flask-wtf = "^0.14.3"
flask = "^1.1.2"
flask-bcrypt = "^0.7.1"
flask-compress = "^1.9.0"
flask-mail = "^0.9.1"
flask-uploads = "^0.2.1"
email-validator="^1.1.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
